--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=4f32ecc8f43d" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -35,7 +35,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/reactstrap/4.8.0/reactstrap.min.js"
     />
     <link rel="stylesheet" href="Style.css" />
-    <title>React App</title>
+    <title>Potter App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
